upd: Добавлена генерация контроллера и клиентов
