# src/YETwitter.Identity.Web/Models/LoginModel.cs
@@ -1,15 +1,0 @@
-﻿namespace YETwitter.Identity.Web.Models;
-
-public class LoginModel
-{
-    [Required(ErrorMessage = "Username is required")]
-    public string? Username { get; set; }
-
-    [Required(ErrorMessage = "Password is required")]
-    [DataType(DataType.Password)]
-    public string? Password { get; set; }
-
-    [Display(Name = "Remember me?")]
-    public bool RememberMe { get; set; }
-}
-
