# src/YETwitter.Identity.Web/Models/RegisterModel.cs
@@ -1,16 +1,0 @@
-﻿namespace YETwitter.Identity.Web.Models;
-
-public class RegisterModel
-{
-    [Required(ErrorMessage = "User Name is required")]
-    public string? Username { get; set; }
-
-    [Required(ErrorMessage = "Email is required")]
-    [EmailAddress]
-    public string? Email { get; set; }
-
-    [Required(ErrorMessage = "Password is required")]
-    [DataType(DataType.Password)]
-    public string? Password { get; set; }
-}
-
