# src/YETwitter.Identity.Web/Models/ResponseModel.cs
@@ -1,7 +1,0 @@
-﻿namespace YETwitter.Identity.Web.Models;
-
-public class ResponseModel
-{
-    public string? Status { get; set; }
-    public string? Message { get; set; }
-}
